--- a/style.css
+++ b/style.css
@@ -1,5 +1,72 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
+
 body {
-  font-family: sans-serif;
+  font-family: "Quicksand", sans-serif;
   background-color: #160f19;
   color: white;
+  margin: 2em;
+}
+
+#about {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 30px;
+}
+
+h1 {
+  font-size: 70px;
+}
+
+.impressive-square {
+  border-radius: 9px;
+  box-shadow: 0 4px 80px #000;
+  width: 100%;
+  padding-top: 20px;
+  /*padding-left: 20%;*/
+  padding-bottom: 20px;
+  /*padding-right: 20%;*/
+  font-family: "Raleway", sans-serif;
+  transition: 1s ease;
+}
+
+#div {
+  background-color: #f29e03;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 100 100'%3E%3Crect x='0' y='0' width='46' height='46' fill-opacity='0.6' fill='%23ffa61d'/%3E%3C/svg%3E");
+}
+
+.impressive-square:hover {
+  -webkit-transform: scale(1.01);
+  -ms-transform: scale(1.01);
+  transform: scale(1.01);
+  transition: 1s ease;
+}
+
+.impressive-square h2 {
+  font-family: "Raleway", sans-serif;
+  margin-top: 20 px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.impressive-square p {
+  font-size: 20px;
+  margin-top: 0px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.impressive-body {
+  height: 100%;
+}
+
+#div2 {
+  background-color: #77aa77;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+footer {
+  text-align: center;
 }
